--- a/requirements.txt
+++ b/requirements.txt
@@ -158,6 +158,7 @@ prompt-toolkit==3.0.36
 Protego==0.2.1
 protobuf==4.22.1
 psutil==5.9.4
+psycopg2-binary==2.9.7
 ptyprocess==0.7.0
 pure-eval==0.2.2
 py==1.11.0
